# synchi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
docs/: _config.yml  configuration.md  index.md  installation.md  termux.md  troubleshooting.md  why.md
docs/_layouts/: default.html
docs/assets/css/: style.css
src/: apply.rs  cli.rs  config.rs  diff.rs  diff_tests.rs  journal.rs  lib.rs  main.rs  output.rs  plan.rs  progress.rs  shell.rs  transport.rs  ui.rs
src/roots/: local.rs  mod.rs  ssh.rs
src/scan/: filter.rs  local.rs  mod.rs  remote.rs  tests.rs
src/state/: db.rs  lock.rs  mod.rs
tests/: cli.rs  hardlinks.rs
